# learned_primal_dual

./: .gitignore  README.md  pyproject.toml
examples/: full_training.py  generate_dataset.py  lpd_tutorial.ipynb  lpd_tutorial.py  utils.py  visualize_radon.py
lpd_jax/configs/: base.py
lpd_jax/ellipses/: learned_chambolle_pock.py  learned_primal.py  learned_primal_dual.py
lpd_jax/models/: factory.py  learned_chambolle_pock.py  learned_primal.py  learned_primal_dual.py
lpd_jax/nn/: blocks.py  prelu.py
lpd_jax/tests/: test_models.py  test_nn.py  test_tomo.py  test_training.py
lpd_jax/tomo/: geometry.py  opnorm.py  phantoms.py  radon.py
lpd_jax/training/: data.py  evaluate.py  loss.py  train.py
