[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lpd_jax"
version = "0.1.0"
description = "A modern JAX/Flax implementation of Learned Primal-Dual for inverse problems."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Leonardo Zepeda-Núñez", email = "lzepeda@melix.org" }
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.7.0",
    "optax>=0.1.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
]

[tool.setuptools.packages.find]
include = ["lpd_jax*"]
